--- a/src/pages/style/Detail.css
+++ b/src/pages/style/Detail.css
@@ -1,4 +1,6 @@
-/* Reset base */
+/* ==============================
+   RESET BASE
+   ============================== */
 * {
     margin: 0;
     padding: 0;
