--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,12 @@
+/* =======================================
+   RESET BASE
+======================================= */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* ===============================
      FOOTER CONTAINER
    =============================== */
