--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -36,7 +36,7 @@
     font-size: 3vw;
 }
 
-/* Hover effetto */
+/* Hover effetto al passaggio del mouse */
 .navbar a:hover {
     color: #0a84ff;
     transform: scale(1.05);
