--- a/src/pages/style/Detail.css
+++ b/src/pages/style/Detail.css
@@ -181,7 +181,8 @@
     }
 
     .detail-image-favorite-wrapper {
-        margin: 2.5vw 0 4vw 0;
+        margin: 4vw 4vw;
+        gap: 18vw;
     }
 
     .detail-image,
